--- a/html-report/templates/report-template.gohtml
+++ b/html-report/templates/report-template.gohtml
@@ -2,7 +2,7 @@
 {{- template "header" . -}}
 <body class="terminal">
 <div class="container">
-    <div class="terminal-nav">
+    <section class="terminal-nav">
         <header class="terminal-logo">
             <div class="logo">
                 <a href="https://quobix.com/vacuum" class="no-style">vacuum</a>
@@ -13,7 +13,7 @@
                 <li property="itemListElement" typeof="ListItem">The world's fastest OpenAPI parser</li>
             </ul>
         </nav>
-    </div>
+    </section>
 </div>
 <hr class="header"/>
 <div class="container">
