--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -6,7 +6,7 @@
             {{ .BundledJS }}
         </script>
         {{- else -}}
-        <script src="http://localhost:8080/js/vacuum-report.js"></script>
+        <script src="http://localhost:8080/js/vacuumReport.js"></script>
         {{- end -}}
         <style>
             :root {
