--- a/html-report/templates/report-template.gohtml
+++ b/html-report/templates/report-template.gohtml
@@ -17,8 +17,22 @@
 </div>
 <hr class="header"/>
 <div class="container">
-    <rule-category-navigation></rule-category-navigation>
+    <rule-category-navigation  id='rule-category-nav'>
+        {{ with .RuleCategories }}
+            {{ range .}}
+                <rule-category-button name='{{ .Id }}'>{{ .Name }}</rule-category-button>
+            {{ end}}
+        {{end}}
+    </rule-category-navigation>
 </div>
+
+{{- if not .TestMode -}}
+<script>
+    {{ .HydrateJS }}
+</script>
+{{- else -}}
+<script src="http://localhost:8080/js/hydrate.js"></script>
+{{- end -}}
 </body>
 {{- template "footer" . -}}
 </html>
