--- a/html-report/ui/src/css/report.css
+++ b/html-report/ui/src/css/report.css
@@ -9,3 +9,11 @@ body {
 hr.header {
     margin: 10px 0 0;
 }
+
+.terminal .logo {
+    font-size: 1.5rem;
+}
+
+.logo {
+    padding: 10px 0 0 0;
+}
