Working through HTML report experience.
Getting used to LitElement and WebComponent compositions.

--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -1,6 +1,6 @@
 {{ define "header"}}
     <head>
-        <title>vacuum HTML Report"</title>
+        <title>vacuum HTML Report</title>
         {{- if not .TestMode -}}
         <script>
             {{ .BundledJS }}
