--- a/html-report/ui/src/css/report.css
+++ b/html-report/ui/src/css/report.css
@@ -20,5 +20,9 @@ hr.header {
 
 category-report {
     display: none;
-    margin-top: 20px;
+}
+
+.category-description {
+    min-height: 200px;
+
 }
