Cleaning up events on the html-report code.
Now I have a pretty good feel for how things need to be laid out.

Signed-off-by: Dave Shanley <dshanley@splunk.com>

--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -56,6 +56,8 @@
                 --sl-color-primary-800: rgb(47 94 122);
                 --sl-color-primary-900: rgb(33 67 87);
                 --sl-color-primary-950: rgb(20 41 53);
+                --global-padding: 20px;
+                --global-margin: 20px;
             }
 
             body {
