--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -42,6 +42,10 @@
                 --terminal-green: #00FF00FF;
                 --hrcolor: #3d3d3d;
                 --code-border: #525252;
+
+                --card-bgcolor: rgba(83, 83, 83, 0.1);
+                --card-bordercolor: rgba(83, 83, 83, 0.3);
+
                 --sl-font-sans: var(--font-stack);
                 --sl-font-mono: var(--font-stack);
                 --sl-font-size-small: 16px;
