Reducing bundle sizes down for html report a little.
ChartJS + Shoelace + Terminal + Litelement is bundling a little higher than I would like at 250kb. Still needs work.

Signed-off-by: Dave Shanley <dshanley@splunk.com>

--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -26,6 +26,7 @@
                 DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
                 serif;
                 --background-color: #0d1117;
+                --background-color-with-opacity: rgba(13, 17, 23, 0.85);
                 --page-width: 90em;
                 --font-color: #e8e9ed;
                 --invert-font-color: #222225;
